fixed footer spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,7 @@
 /*Footer*/
+footer{
+  margin-top: 80px;
+}
 .inp-container{
   margin: 0px 50px 10px 0px;
 }
