--- a/css/products.css
+++ b/css/products.css
@@ -259,7 +259,7 @@
   color: #000;
 }
 
-.other-options a {
+.other-options .refil-opt a {
   padding: 15px;
   font-size: 12px;
   border: 5px solid #d2d2d3;
